grammar.js
  call: $ => seq(
    field('name', choice($.identifier, $.qualified_name)),
    OP.par_left,
    field('args', optional($.args)),
    OP.par_right
  ),
  args: $ => sepBy1(OP.comma, $.expr),

  list_values: $ => seq(
    OP.par_left,
    optional(sepBy1(OP.comma,
      choice(
        $.identifier,
        $.qualified_name
      ),
    )),
    OP.par_right,
  ),

  // XXX: Don't put a precedence number on this! If you do, then GLR conflicts with text won't occur
  paren: $ => prec.right(seq(OP.par_left, $.expr, OP.par_right)),

  // NOTE: I don't 100% understand why, but here we need to give the numeric precedence to the *inner* expression.
  binary: $ => choice(
    binop($, 8, OP.percent, OP.mod),
    binop($, 7, OP.slash),
    binop($, 6, OP.asterisk),
    binop($, 5, OP.minus),
    binop($, 4, OP.plus),
    binop($, 3, OP.caret, OP.hasnt, OP.exclamquestion, OP.has, OP.question),
    binop($, 2, OP.neq, OP.gt, OP.lt, OP.le, OP.ge, OP.eq),
    binop($, 1, OP.or, OP.and, OP.dbl_amp, $._dbl_pipe),
  ),

  // We have to actually parse this (can't treat '||' as a token),
  // because `{a||b}` in Ink is actually a *sequence*, so it means "a, then nothing, then b".
  _dbl_pipe: _ => alias(
    seq(OP.pipe, token.immediate(OP.pipe)),
    '||' // Pretend like it is a token, no need to alarm anybody.
  ),

  identifier: _ => IDENTIFIER_REGEX,

  qualified_name: $ => prec.right(seq(
    $.identifier, OP.period, $.identifier,
    optional(seq(OP.period, $.identifier)) // third level: -> knot.stitch.label
  )),

  number: _ => NUMBER_REGEX,

  boolean: _ => choice('false', 'true'),

  string: $ => seq('"', repeat(choice($._logic, $.glue, ...STRING_PARTS)), '"'),

  divert: $ => seq(
    $._divert_mark,
    field('target', $._divert_target),
  ),
}


/// Separate every two occurrences of `rule` by an occurrence of `sep`. `rule` has to occurr at least once.
function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}

module.exports = grammar({
  name: 'ink',

    ink: $ => seq(
      optional($._content_block),
      repeat($.stitch_block), // Evidently we can define orphan stitches. OK …
      repeat($.knot_block),
    ),

    // Transform the external nodes into anonymous nodes. That’s because hidden nodes
    // don’t appear at all in downstream tools (can’t find them using cursors), but
    // sometimes we need to know if the exist (or have been inserted as MISSING, etc.)
    _eol: $ => alias($.eol, "EOL"),
    _knot_block_start: $ => alias($.knot_block_start, "KNOT_BLOCK_START"),
    _knot_block_end: $ => alias($.knot_block_end, "KNOT_BLOCK_END"),
    _stitch_block_start: $ => alias($.stitch_block_start, "STITCH_BLOCK_START"),
    _stitch_block_end: $ => alias($.stitch_block_end, "STITCH_BLOCK_END"),
    _choice_block_start: $ => alias($.choice_block_start, "CHOICE_BLOCK_START"),
    _choice_block_end: $ => alias($.choice_block_end, "CHOICE_BLOCK_END"),
    _gather_block_start: $ => alias($.gather_block_start, "GATHER_BLOCK_START"),
    _gather_block_end: $ => alias($.gather_block_end, "GATHER_BLOCK_END"),

    _content_block: $ => repeat1($._content_item),

    knot_block: $ => prec.right(seq(
      $._knot_block_start,
      field('header', $.knot),
      optional($._content_block),
      repeat($.stitch_block),
      $._knot_block_end,
    )),

    stitch_block: $ => prec.right(seq(
      $._stitch_block_start,
      field('header', $.stitch),
      optional($._content_block),
      $._stitch_block_end,
    )),

    choice_block: $ => prec.right(seq(
      $._choice_block_start,
      field('header', $.choice),
      $._eol,
      repeat($._content_item),
      $._choice_block_end,
    )),

    gather_block: $ => prec.right(seq(
      $._gather_block_start,
      field('header', $.gather),
      repeat($._content_item),
      $._gather_block_end,
    )),

    _content_item: $ => choice(
      $._single_line_content_item,
      // These handle line breaks on their own:
      $.choice_block,
      $.gather_block,
    ),

    _redirect: $ => choice(
      $.divert,  // diverts are defined as part of expressions.
      $.tunnel,
      $.thread,
    ),

    _divert_target: $ => prec.right(choice($.identifier, $.qualified_name, $.call)),

    tunnel: $ => choice(
      seq($._tunnel_return, field('target', optional($._divert_target))),
      // one or more diverts with return
      // -> do_this ->
      seq(repeat1($.divert), $._divert_mark),
      // two or more diverts without return
      // -> do_this -> do_that
      seq($.divert, repeat1($.divert)),
    ),

    thread: $ => seq($._thread_mark, field('target', $._divert_target)),

    text: $ => prec.right(repeat1($._word)),

    _word: _ => choice(...STRING_PARTS, '"'), // as stated above: everything a string can be, plus `"`

    content: $ => prec.right(choice(
      seq(
        field('content', $._glue_logic_or_text),
        field('tag', repeat($.tag)),
        field('redirect', optional($._redirect)),
      ),
      seq(
        field('tag', repeat1($.tag)),
        field('redirect', optional($._redirect)),
      ),
      field('redirect', $._redirect),
    )),

    // Choice content can not start with logic blocks, so we make a special version.
    _glue_logic_or_text: $ => prec.right(repeat1(choice(
      $.glue,
      $._logic,
      $.text,
    ))),

    _logic: $ => choice(
      $.eval,
      $.alternatives,
      $.conditional_text,
      $.cond_block,
      $.multiline_alternatives,
    ),

    // Lower dynamic precedence so that `{a||b}` is never interpreted as an `eval`,
    // but instead as an `alternatives` (which is what the Ink compiler interprets it as).
    eval: $ => prec.dynamic(-1, prec.right(seq(
      '{',
      field('expr', $.expr),
      '}'
    ))),

    conditional_text: $ => prec.right(seq(
      '{',
      seq(field('condition', $.expr), ':'),
      $.content,
      optional(seq(
        '|',
        optional($.content)
      )),
      '}',
    )),

    cond_block: $ => prec.right(seq(
      '{',
      choice($._eol, alias($._first_cond_arm, $.cond_arm)),
      repeat($.cond_arm),
      '}',
    )),

    _first_cond_arm: $ => seq(
      field('condition', $.expr), ':',
      $._eol_field,  // eol NOT optional in first arm
      optional($._then_block)
    ),

    cond_arm: $ => prec.right(seq($._if_line, optional($._then_block))),

    _if_line: $ => seq(
      field('mark', mark('-')),
      field('condition', choice($.expr, $.else)),
      ':',
      optional($._eol_field),
    ),

    _then_block: $ => prec.left(repeat1($._content_item_in_conditional)),

    else: _ => 'else',

    tag: $ => prec.left(seq(
      field('mark', '#'),
      field('content', $._glue_logic_or_text)
    )),

    choice: $ => choice(
      field('marks', $.choice_marks),  // Completely empty choice == fallback choice. Generates a compiler warning ("please add a `->`"), but it is valid syntax.
      seq(
        field('marks', $.choice_marks),
        optional(seq(
          $._label_field,
          optional($._eol_field),
        )),
        repeat(seq(
          field('condition', $.condition),
          optional($._eol_field),
        )),
        $._choice_content,
      ),
    ),

    gather: $ => prec.right(seq(
      $.gather_marks,
      optional($._label_field),
      optional($._eol_field)
    )),

    _eol_field: $ => field('eol', alias($._eol, $.eol)),

    choice_marks: $ => prec.right(repeat1(prec(PREC.ink, $.choice_mark))),
    gather_marks: $ => prec.right(repeat1(prec(PREC.ink, $.gather_mark))),

    _label_field: $ => prec(PREC.ink, field('label', $.label)),
    condition: $ => seq('{', field('expr', $.expr), '}'),

    _choice_content: $ => prec.right(choice(
      field('main', $._choice_main_content),
      $._compound_choice_content,
      // empty fallback choice:
      $._divert_mark,
    )),

    choice_only: $ => seq(mark('['), optional($.content), mark(']')),

    knot: $ => prec.right(seq(
      field("start_mark", $._knot_mark),
      field('function', optional('function')),
      field('name', $.identifier),
      field('params', optional($.params)),
      field("end_mark", optional($._knot_mark)),
      $._eol,
    )),

    _knot_mark: _ => alias(mark(/==+/), '=='), // TODO: Be sure to document that we collapse all knot marks to this "literal" (to distinguish it from the comparison operator)
    _stitch_mark: _ => alias(mark('='), '='),
    _divert_mark: _ => alias(mark('->'), '->'),
    _tunnel_return: _ => alias(mark('->->'), '->->'),
    _thread_mark: _ => alias(mark('<-'), '<-'),

    stitch: $ => prec.right(seq(
      field('start_mark', $._stitch_mark),
      field('name', $.identifier),
      field('params', optional($.params)),
      $._eol,
    )),

    code: $ => seq('~', $._code_stmt),

    _code_stmt: $ => choice(
      $.assignment,
      $.temp_def,
      $.call,
      $.postfix,
      $.return,
    ),

    assignment: $ => seq(
      field('name', $.identifier),
      field('op', choice('=', '-=', '+=')),
      field('value', $.expr)
    ),

    temp_def: $ => seq(
      'temp', $._space,
      field('name', $.identifier),
      field('op', "="),
      field('value', $.expr)
    ),

    postfix: $ => seq(
      field('name', $.identifier),
      field('op', choice(OP.dbl_minus, OP.dbl_plus))
    ),

    return: $ => seq('return', $.expr),

    params: $ => seq('(', optional(sepBy1(',', $.param)), ')'),

    param: $ => seq(
      field('ref', optional('ref')),
      field('value', $._param_value),
    ),
    _param_value: $ => choice($.identifier, $.divert),

    // Let's just accept any old characters for the path. We don't have to do anything with it …
    global: $ => seq(
      field('keyword', $._global_keyword),
      $._space,
      field('name', $.identifier),
      field('op', '='),
      field('value', $.expr),
    ),
    _global_keyword: _ => choice('VAR', 'CONST'),

    list: $ => seq(
      field('keyword', 'LIST'),
      $._space,
      field('name', $.identifier),
      field('op', '='),
      field('values', $.list_value_defs),
    ),

    list_value_defs: $ => sepBy1(',', field('value', $.list_value_def)),

    list_value_def: $ => choice(
      field('name', $.identifier),
      seq(
        field('name', $.identifier),
        field('op', '='),
        field('value', alias($._list_def_number, $.number)),
      ),
      seq(
        field('lparen', '('),
        field('name', $.identifier),
        field('rparen', ')'),
      ),
      seq(
        field('lparen', '('),
        field('name', $.identifier),
        field('op', '='),
        field('value', alias($._list_def_number, $.number)),
        field('rparen', ')'),
      ),
      seq(
        field('lparen', '('),
        field('name', $.identifier),
        field('rparen', ')'),
        field('op', '='),
        field('value', alias($._list_def_number, $.number)),
      ),
    ),

    _list_def_number: _ => /\d+/,  // weird bug: Using the actual $.number regex (/\d+(\.\d+)?/) leads to the number containing the leading whitespace. I don't get it.

    ...EXPR,

    _space: _ => /[ \t]+/,
    // _space: _ => /\p{Space}+/, TODO: activate and write test
