test/corpus/3_variables_and_logic/4_temporary_variables.txt
===
.CDA. Temporary variables are for scratch calculations
===
== near_north_pole ==
	~ temp number_of_warm_things = 0
	{ blanket:
		~ number_of_warm_things++
	}

---

(ink
  (knot_block
    header: (knot
      name: (identifier))
    (code
      (temp_def
        name: (identifier)
        value: (number)))
    (paragraph
      content: (cond_block
        (cond_arm
          condition: (identifier)
          eol: (eol)
          (code
            (postfix
              left: (identifier))))))))

===
.CDB. Knots and stitches can take parameters
===
*	[Accuse Hasting]
		-> accuse("Hastings")
*	[Accuse Mrs Black]
		-> accuse("Claudia")
*	[Accuse myself]
		-> accuse("myself")

== accuse(who) ==
	"I accuse {who}!" Poirot declared.
	"Really?" Japp replied. "{who == "myself":You did it?|{who}?}"
	"And why not?" Poirot shot back.

---

(ink
  (choice_block
    (choice
      (choice_marks
        (choice_mark))
      (choice_only
        (content
          (text
            (word)
            (word)))))
    (paragraph
      (divert
        (call
          (identifier)
          (args
            (string))))))
  (choice_block
    (choice
      (choice_marks
        (choice_mark))
      (choice_only
        (content
          (text
            (word)
            (word)
            (word)))))
    (paragraph
      (divert
        (call
          (identifier)
          (args
            (string))))))
  (choice_block
    (choice
      (choice_marks
        (choice_mark))
      (choice_only
        (content
          (text
            (word)
            (word)))))
    (paragraph
      (divert
        (call
          (identifier)
          (args
            (string))))))
  (knot_block
    (knot
      (identifier)
      (params
        (param
          (identifier))))
    (paragraph
      (text
        (word)
        (word)
        (word))
      (eval
        (identifier))
      (text
        (word)
        (word)
        (word)
        (word)
        (word)))
    (paragraph
      (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word))
      (conditional_text
        (binary
          (identifier)
          (string))
        (content
          (text
            (word)
            (word)
            (word)
            (word)))
        (content
          (eval
            (identifier))
          (text
            (word))))
      (text
        (word)))
    (paragraph
      (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)))))

===
.CDC. Sending divert Targets as parameters
===
== sleeping_in_hut ==
	You lie down and close your eyes.
	-> generic_sleep (-> waking_in_the_hut)

==	 generic_sleep (-> waking)
	You sleep perchance to dream etc. etc.
	-> waking

== waking_in_the_hut
	You get back to your feet, ready to continue your journey.
---

(ink
  (knot_block
    (knot
      (identifier))
    (paragraph
      (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)))
    (paragraph
      (divert
        (call
          (identifier)
          (args
            (divert
              (identifier)))))))
  (knot_block
    (knot
      (identifier)
      (params
        (param
          (divert
            (identifier)))))
    (paragraph
      (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)))
    (paragraph
      (divert
        (identifier))))
  (knot_block
    (knot
      (identifier))
    (paragraph
      (text
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)
        (word)))))

===
.CDCa. Corner case: Fully qualified divert targets
===
-> knot.stitch(-> knot2.stitch)
---

(ink
  (paragraph
    (divert
      (call
        (qualified_name
          (identifier)
          (identifier))
        (args
          (divert
            (qualified_name
              (identifier)
              (identifier))))))))
