test/corpus/3_variables_and_logic/5_functions.txt
===
.CEA. Defining and calling functions
===
=== function say_yes_to_everything ===
	~ return true

=== function lerp(a, b, k) ===
	~ return ((b - a) * k) + a

=== and_now_for_some_content ===
~ x = lerp(2, 8, 0.3)

*	{say_yes_to_everything()} 'Yes.'
---

(ink
  (knot_block
    (knot
      (identifier))
    (content_block
      (code
        (return
          (boolean)))))
  (knot_block
    (knot
      (identifier)
      (params
        (param
          (identifier))
        (param
          (identifier))
        (param
          (identifier))))
    (content_block
      (code
        (return
          (binary
            (paren
              (binary
                (paren
                  (binary
                    (identifier)
                    (identifier)))
                (identifier)))
            (identifier))))))
  (knot_block
    (knot
      (identifier))
    (content_block
      (code
        (assignment
          (identifier)
          (call
            (identifier)
            (args
              (number)
              (number)
              (number)))))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (condition
            (call
              (identifier)))
          (content
            (text)))))))

===
.CEB. Parameters can be passed by reference
===
=== function alter(ref x, k) ===
	~ x = x + k
---

(ink
  (knot_block
    (knot
      (identifier)
      (params
        (param
          (identifier))
        (param
          (identifier))))
    (content_block
      (code
        (assignment
          (identifier)
          (binary
            (identifier)
            (identifier)))))))
