test/corpus/3_variables_and_logic/6_constants.txt
===
.CFA. Global Variables
===
CONST HASTINGS = "Hastings"
CONST POIROT = "Poirot"
CONST JAPP = "Japp"

VAR current_chief_suspect = HASTINGS

== review_evidence ==
	{ found_japps_bloodied_glove:
		~ current_chief_suspect = POIROT
	}
	Current Suspect: {current_chief_suspect}
---

(ink
  (content_block
    (global
      (identifier)
      (string))
    (global
      (identifier)
      (string))
    (global
      (identifier)
      (string))
    (global
      (identifier)
      (identifier)))
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (cond_block
          (cond_arm
            (identifier)
            (eol)
            (code
              (assignment
                (identifier)
                (identifier))))))
      (paragraph
        (text)
        (eval
          (identifier))))))
