test/corpus/4_advanced_flow_control/1_tunnels.txt
===
.DAA. Tunnels run sub-stories
===
=== plains ===
= night_time
	The dark grass is soft under your feet.
	+	[Sleep]
		-> sleep_here -> wake_here -> day_time
= day_time
	It is time to move on.

=== wake_here ===
	You wake as the sun rises.
	+	[Eat something]
		-> eat_something ->
	+	[Make a move]
	-	->->

=== sleep_here ===
	You lie down and try to close your eyes.
	-> monster_attacks ->
	Then it is time to sleep.
	-> dream ->
	->->
---

(ink
  (knot_block
    (knot
      (identifier))
    (stitch_block
      (stitch
        (identifier))
      (content_block
        (paragraph
          (text))
        (choice_block
          (choice
            (choice_marks
              (choice_mark))
            (choice_only
              (content
                (text))))
          (paragraph
            (tunnel
              (divert
                (identifier))
              (divert
                (identifier))
              (divert
                (identifier)))))))
    (stitch_block
      (stitch
        (identifier))
      (content_block
        (paragraph
          (text)))))
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (text))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (choice_only
            (content
              (text))))
        (paragraph
          (tunnel
            (divert
              (identifier)))))
      (choice_block
        (choice
          (choice_marks
            (choice_mark))
          (choice_only
            (content
              (text)))))
      (gather_block
        (gather
          (gather_marks
            (gather_mark))
          (content
            (tunnel))))))
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (text))
      (paragraph
        (tunnel
          (divert
            (identifier))))
      (paragraph
        (text))
      (paragraph
        (tunnel
          (divert
            (identifier))))
      (paragraph
        (tunnel)))))

===
.DAB. Advanced: Tunnels can return elsewhere
===
=== fall_down_cliff
-> hurt(5) ->
You're still alive! You pick yourself up and walk on.

=== hurt(x)
	~ stamina -= x
	{ stamina <= 0:
		->-> youre_dead
	}

=== youre_dead
Suddenly, there is a white light all around you. Fingers lift an eyepiece from your forehead. 'You lost, buddy. Out of the chair.'
---

(ink
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (tunnel
          (divert
            (call
              (identifier)
              (args
                (number))))))
      (paragraph
        (text))))
  (knot_block
    (knot
      (identifier)
      (params
        (param
          (identifier))))
    (content_block
      (code
        (assignment
          (identifier)
          (identifier)))
      (paragraph
        (cond_block
          (cond_arm
            (binary
              (identifier)
              (number))
            (paragraph
              (tunnel
                (identifier))))))))
  (knot_block
    (knot
      (identifier))
    (content_block
      (paragraph
        (text)))))
