test/corpus/4_advanced_flow_control/2_threads.txt
===
.DBA. Threads join multiple sections together
===
== thread_example ==
I had a headache; threading is hard to get your head around.
<- conversation
<- walking


== conversation ==
It was a tense moment for Monty and me.
 * "What did you have for lunch today?"[] I asked.
    "Spam and eggs," he replied.
 * "Nice weather, we're having,"[] I said.
    "I've seen better," he replied.
 - -> house

== walking ==
We continued to walk down the dusty road.
 * [Continue walking]
    -> house

== house ==
Before long, we arrived at his house.
-> END
---
(ink
	(knot_block
		(knot (identifier))
		(content_block
			(paragraph (text))
			(thread (identifier))
			(thread (identifier))))
	(knot_block
		(knot (identifier))
		(content_block
			(paragraph (text))
			(content_block
				(choice (flow (text)) (flow (text)))
				(paragraph (text))
				(choice (flow (text)) (flow (text)))
				(paragraph (text))
				(gather (divert (identifier))))))
	(knot_block
		(knot (identifier))
		(content_block
			(paragraph (text))
			(content_block
				(choice (flow (text)))
				(divert (identifier)))))
	(knot_block
		(knot (identifier))
		(content_block
			(paragraph (text))
			(divert (identifier))))
)
