test/corpus/5_advanced_state_tracking/3_list_values.txt
===
.ECA. List Values
===
LIST volumeLevel = off, quiet, medium, loud, deafening
VAR lecturersVolume = quiet
VAR murmurersVolume = quiet

{ lecturersVolume < deafening:
	~ lecturersVolume++

	{ lecturersVolume > murmurersVolume:
		~ murmurersVolume++
		The murmuring gets louder.
	}
}
---

(ink
  (content_block
    (list
      (identifier)
      (list_values
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)))
    (global
      (identifier)
      (identifier))
    (global
      (identifier)
      (identifier))
    (cond_block
      (cond_arm
        (binary
          (identifier)
          (identifier))
        (code
          (postfix
            (identifier)))
        (cond_block
          (cond_arm
            (binary
              (identifier)
              (identifier))
            (code
              (postfix
                (identifier)))
            (text)))))))

===
.ECB. Advanced: Defining your own numerical values
===
LIST primeNumbers = two = 2, three = 3, five = 5
LIST primeNumbers = two = 2, three, five = 5
---

(ink
  (content_block
    (list
      (identifier)
      (list_values
        (lv_assign
          (identifier)
          (number))
        (lv_assign
          (identifier)
          (number))
        (lv_assign
          (identifier)
          (number))))
    (list
      (identifier)
      (list_values
        (lv_assign
          (identifier)
          (number))
        (identifier)
        (lv_assign
          (identifier)
          (number))))))
