test/corpus/5_advanced_state_tracking/4_multivalued_lists.txt
===
.EDA. Brackets around whole term or just the name
===
LIST primeNumbers = (two = 2), (three) = 3, (five = 5)
---

(ink
  (list
    (identifier)
    (list_value_defs
      (list_value_def
        (identifier)
        (number))
      (list_value_def
        (identifier)
        (number))
      (list_value_def
        (identifier)
        (number)))))

===
.EDB. Assigning multiple values
===
~ DoctorsInSurgery = (Adams, Bernard)
~ DoctorsInSurgery = (Adams, Bernard, Eamonn)
~ DoctorsInSurgery = ()
---

(ink
  (code
    (assignment
      (identifier)
      (list_values
        (identifier)
        (identifier))))
  (code
    (assignment
      (identifier)
      (list_values
        (identifier)
        (identifier)
        (identifier))))
  (code
    (assignment
      (identifier)
      (list_values))))

===
.EDC. Testing for containment
===
{ DoctorsInSurgery ? (Adams, Bernard):
	Dr Adams and Dr Bernard are having a hushed argument in one corner.
- DoctorsInSurgery has Eamonn:
	Dr Eamonn is polishing his glasses.
- DoctorsInSurgery !? (Adams, Bernard):
- DoctorsInSurgery hasnt (Adams, Bernard):
- SomeList ? ():
- Facts ? (Fogg_is_English, Fogg_is_fairly_odd):
}
---

(ink
  (paragraph
    (cond_block
      (cond_arm
        (binary
          (identifier)
          (list_values
            (identifier)
            (identifier)))
        (eol)
        (paragraph
          (text)))
      (cond_arm
        (binary
          (identifier)
          (identifier))
        (eol)
        (paragraph
          (text)))
      (cond_arm
        (binary
          (identifier)
          (list_values
            (identifier)
            (identifier)))
        (eol))
      (cond_arm
        (binary
          (identifier)
          (list_values
            (identifier)
            (identifier)))
        (eol))
      (cond_arm
        (binary
          (identifier)
          (list_values))
        (eol))
      (cond_arm
        (binary
          (identifier)
          (list_values
            (identifier)
            (identifier)))
        (eol)))))

===
.EDD. Nicer list printing
===

LIST favouriteDinosaurs = (stegosaurs), brachiosaur, (anklyosaurus), (pleiosaur)

My favourite dinosaurs are {listWithCommas(favouriteDinosaurs, "all extinct")}.

== function listWithCommas(list, if_empty)
    {LIST_COUNT(list):
    - 2:
        	{LIST_MIN(list)} and {listWithCommas(list - LIST_MIN(list), if_empty)}
    - 1:
        	{list}
    - 0:
			{if_empty}
    - else:
      		{LIST_MIN(list)}, {listWithCommas(list - LIST_MIN(list), if_empty)}
    }
---

(ink
  (list
    (identifier)
    (list_value_defs
      (list_value_def
        (identifier))
      (list_value_def
        (identifier))
      (list_value_def
        (identifier))
      (list_value_def
        (identifier))))
  (paragraph
    (text)
    (eval
      (call
        (identifier)
        (args
          (identifier)
          (string))))
    (text))
  (knot_block
    (knot
      (identifier)
      (params
        (param
          (identifier))
        (param
          (identifier))))
    (paragraph
      (cond_block
        (cond_arm
          (call
            (identifier)
            (args
              (identifier)))
          (eol))
        (cond_arm
          (number)
          (eol)
          (paragraph
            (eval
              (call
                (identifier)
                (args
                  (identifier))))
            (text)
            (eval
              (call
                (identifier)
                (args
                  (binary
                    (identifier)
                    (call
                      (identifier)
                      (args
                        (identifier))))
                  (identifier))))))
        (cond_arm
          (number)
          (eol)
          (paragraph
            (eval
              (identifier))))
        (cond_arm
          (number)
          (eol)
          (paragraph
            (eval
              (identifier))))
        (cond_arm
          (else)
          (eol)
          (paragraph
            (eval
              (call
                (identifier)
                (args
                  (identifier))))
            (text)
            (eval
              (call
                (identifier)
                (args
                  (binary
                    (identifier)
                    (call
                      (identifier)
                      (args
                        (identifier))))
                  (identifier))))))))))

===
.EDE. Pedantic example
===
My favourite dinosaur{LIST_COUNT(favouriteDinosaurs) != 1:s} {isAre(favouriteDinosaurs)} {listWithCommas(favouriteDinosaurs, "all extinct")}.
---

(ink
  (paragraph
    (text)
    (conditional_text
      (binary
        (call
          (identifier)
          (args
            (identifier)))
        (number))
      (content
        (text)))
    (eval
      (call
        (identifier)
        (args
          (identifier))))
    (eval
      (call
        (identifier)
        (args
          (identifier)
          (string))))
    (text)))

===
.EDF. Intersecting Lists
===
{desiredValues ^ actualValues: The new president has at least one desirable quality.}

{LIST_COUNT(desiredValues ^ actualValues) == 1: Correction, the new president has only one desirable quality. {desiredValues ^ actualValues == self_belief: It's the scary one.}}
---

(ink
  (paragraph
    (conditional_text
      (binary
        (identifier)
        (identifier))
      (content
        (text))))
  (paragraph
    (conditional_text
      (binary
        (call
          (identifier)
          (args
            (binary
              (identifier)
              (identifier))))
        (number))
      (content
        (text)
        (conditional_text
          (binary
            (binary
              (identifier)
              (identifier))
            (identifier))
          (content
            (text)))))))
