test/corpus/7_running_your_ink/1_choice_tags.txt
===
.GAA. Tags in choices
===
+ Simple choice # tag
+ Start of choice text # tag # both [Choice only text # choice only tag] This is after the choice is taken # post choice tag -> divert
---

(ink
  (content_block
    (choice_block
      (choice
        main: (content
          (text)
          (tag
            (text)))))
    (choice_block
      (choice
        main: (content
          (text)
          (tag
            (text))
          (tag
            (text)))
        temporary: (content
          (text)
          (tag
            (text)))
        final: (content
          (text)
          (tag
            (text))
          (divert
            target: (identifier)))))))
